# lte-bib-bbaf589-10-1093

./: .gitignore  .markdownlint.yaml  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md  inputs.md  install.md
docs/experiments/: fir.md  index.md  inputs.md  repeats.md  samples.md  uniqify_gt.md
docs/experiments/appendix/: fir.md  index.md  uniqify_tools.md
docs/experiments/chromosomes/: index.md
docs/experiments/measures_modes_and_contents/: index.md
docs/experiments/one_bin/: index.md
docs/experiments/overview/: index.md
docs/experiments/uniqify_gt/: index.md
experiments/: README.md
experiments/scripts/fmt_to_plaseval/: bins.sh  ground_truth.sh
experiments/scripts/plaseval/: comp.sh
experiments/scripts/samples/: complete_hybrid_asm.sh
scripts/chromosomes/: evals.sh  fig_dist.sh  fig_dist_content.sh  fig_dist_mode.sh  merge_evals.sh
scripts/fir/fmt_to_plaseval/: bins.sh  ground_truth.sh
scripts/fir/plaseval/: comp.sh
scripts/inputs/: download_original.sh  fmt_binning.sh  fmt_gt.sh  fmt_samples.sh  only_plasmids.sh  with_chromosomes.sh
scripts/one_bin/: binning.sh  fig_dist.sh  fig_vs.sh
scripts/one_bin/binning/: evals.sh  fig_dist.sh  fig_dist_no_pbf.sh  merge_evals.sh  samples.sh
scripts/one_bin/gt_vs_gt/: evals.sh  fig_dist.sh  fig_vs.sh  samples.sh
scripts/overview/: evals.sh  fig_dist.sh  fig_dist_content.sh  fig_dist_mode.sh  merge_evals.sh
scripts/uniqify/: sampling.sh
scripts/uniqify/ground_truths/: eval_repeats.sh  (+5 more)
src/lteu/: __init__.py  __main__.py  app.py  bins.py  eval.py  format.py  log.py  tools.py
(+83 files in other folders)
