[project]
    name = "lteu"
    version = "0.1.0"
    description = "Letter to the editor utilities."
    readme = "README.md"
    authors = [
        { name = "vepain", email = "victorepain@disroot.org" },
        { name = "amane", email = "aniket_mane@sfu.ca" },
    ]
    requires-python = ">=3.13"
    dependencies = [
    "pandas>=3.0.1",
    "typer>=0.24.1",
]

    [project.scripts]
        lteu = "lteu.__main__:main"

[build-system]
    requires = ["uv_build>=0.9.7,<0.10.0"]
    build-backend = "uv_build"

[dependency-groups]
    dev = [{ include-group = "lint" }]
    lint = ["ruff>=0.15.4", "ty>=0.0.19"]

[tool.ruff.lint]
    select = ["ALL"]
    ignore = [
        # multi-line-summary-second-line
        "D213",
        # one-blank-line-before-class
        "D203",
        # flake8-todos
        "TD",
        # Fix
        "FIX",
    ]

    [tool.ruff.lint.pydocstyle]
        convention = "numpy"

    [tool.ruff.lint.extend-per-file-ignores]
        "tests/**/*.py" = [
            # at least this three should be fine in tests:
            "S101", # asserts allowed in tests...
            "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
            "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
            # The below are debateable
            "PLR2004", # Magic value used in comparison, ...
            "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
        ]
